We add final features to P1

--- a/src/app/components/encontrados/encontrados.component.html
+++ b/src/app/components/encontrados/encontrados.component.html
@@ -18,7 +18,7 @@
                     </div>
                   </div>
                   <div class="btn-group">
-                    <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" id="dropdownMenuReference" data-toggle="dropdown">Reference</button>
+                   <!--  <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" id="dropdownMenuReference" data-toggle="dropdown">Reference</button> -->
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuReference">
                       <a class="dropdown-item" href="#">Relevance</a>
                       <a class="dropdown-item" href="#">Name, A to Z</a>
@@ -36,10 +36,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="dg01" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="dg01" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Puppy</a></h3>
+                    <h3><a href="/anim-encontrado">Puppy</a></h3>
                     <p class="mb-0">Edad: 6 meses</p>
                   </div>
                 </div>
@@ -47,10 +47,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="dg02" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="dg02" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Cofi</a></h3>
+                    <h3><a href="/anim-encontrado">Cofi</a></h3>
                     <p class="mb-0">Edad: 8 meses</p>
                     
                   </div>
@@ -59,10 +59,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="dg03" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="dg03" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Max</a></h3>
+                    <h3><a href="/anim-encontrado">Max</a></h3>
                     <p class="mb-0">Edad: 1 año</p>
                     
                   </div>
@@ -72,10 +72,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="cat01" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="cat01" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Manchas</a></h3>
+                    <h3><a href="/anim-encontrado">Manchas</a></h3>
                     <p class="mb-0">Edad: 1 año</p>
                     
                   </div>
@@ -84,10 +84,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="cat02" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="cat02" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Marte</a></h3>
+                    <h3><a href="/anim-encontrado">Marte</a></h3>
                     <p class="mb-0">Edad: 2 años</p>
                   </div>
                 </div>
@@ -95,10 +95,10 @@
               <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                 <div class="block-4 text-center border">
                   <figure class="block-4-image">
-                    <a href="shop-single.html"><img [src]="cat03" alt="Image placeholder" class="img-fluid"></a>
+                    <a href="/anim-encontrado"><img [src]="cat03" alt="Image placeholder" class="img-fluid"></a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="shop-single.html">Nieve</a></h3>
+                    <h3><a href="/anim-encontrado">Nieve</a></h3>
                     <p class="mb-0">Edad: 1 año</p>
                     
                   </div>
