--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -35,10 +35,10 @@
             <a href="/main">Inicio</a>
           </li>
           <li>
-            <a href="index.html">Acerca de</a>
+            <a href="/acercade">Acerca de</a>
           </li>
           <li>
-            <a href="index.html">Reportar animal</a>
+            <a href="/crearreporte">Reportar animal</a>
           </li>
           <li>
             <a href="encontrados">Animales encontrados</a>
