--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -13,7 +13,7 @@
           <h2><a href="#">Se parte del cambio</a></h2>
           <p class="post-meta mb-4"><span class="block-4-sep"></span>Empieza hoy</p>
           <p>SaveMe: Un puente de esperanza para los animales en Ecuador. Nuestro proyecto surge con el objetivo de brindar una voz a aquellos seres indefensos que se encuentran en situación de peligro o en busca de un hogar. A través de esta plataforma, unimos esfuerzos para reportar y promover la adopción de animales en todo el país. Únete a nosotros y se parte del cambio que salva vidas. Juntos, podemos marcar la diferencia.</p>
-          <p><a href="#" class="btn btn-primary btn-sm">Ver Historia</a></p>
+          <p><a href="/acercade" class="btn btn-primary btn-sm">Ver Historia</a></p>
         </div>
       </div>
     </div>
