--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
         <div class="col-lg-6 mb-5 mb-lg-0">
           <div class="row">
             <div class="col-md-12">
-              <h3 class="footer-heading mb-4">Navegación</h3>
+              <h3 class="footer-heading mb-4">SaveMe! | G1</h3>
             </div>
             <div class="col-md-6 col-lg-4">
               <ul class="list-unstyled">
@@ -35,19 +35,21 @@
         </div>
       </div>
       <div class="block-7 pt-5">
+        
         <form action="#" method="post">
           <label for="email_subscribe" class="footer-heading">Subscribirse</label>
           <div class="form-group">
-            <input type="text" class="form-control py-4" id="email_subscribe" placeholder="Escribe tu email para recibir noticias de nuevos hallazgos de animales">
-            <input type="submit" class="btn btn-sm btn-primary" value="Send">
+           <input type="text" placeholder="Ingresa aquí tu email para recibir noticias y reportes de nuevos animales encontrados" class="input input-bordered input-primary w-full max-w-full" />
+           <button class="btn btn-primary mt-2 w-full max-w-full">Suscribirse</button>
           </div>
+          
         </form>
       </div>
       <div class="row pt-5 mt-5 text-center">
         <div class="col-md-12">
           <p>
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-          2023 &copy; All rights reserved | SaveMe! | DAWA 7-4
+          2023 &copy; All rights reserved | RaccoonDevs | DAWA 7-4
           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
