--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -6,14 +6,14 @@
         </div>
       </div>
       <div class="row align-items-center">
-        <div class="col-md-12 col-lg-7 mb-5">
+        <div class="col-md-12 col-lg-6 mb-6">
           <a href="#"><img [src]="banner01" alt="Banner SaveMe" class="img-fluid rounded"></a>
         </div>
-        <div class="col-md-12 col-lg-5 text-center pl-md-5">
-          <h2><a href="#">Se parte del cambio</a></h2>
+        <div class="col-md-12 col-lg-3 text-center pl-md-5">
+          <h1 class="text-2xl">Se parte del cambio</h1>
           <p class="post-meta mb-4"><span class="block-4-sep"></span>Empieza hoy</p>
           <p>SaveMe: Un puente de esperanza para los animales en Ecuador. Nuestro proyecto surge con el objetivo de brindar una voz a aquellos seres indefensos que se encuentran en situación de peligro o en busca de un hogar. A través de esta plataforma, unimos esfuerzos para reportar y promover la adopción de animales en todo el país. Únete a nosotros y se parte del cambio que salva vidas. Juntos, podemos marcar la diferencia.</p>
-          <p><a href="/acercade" class="btn btn-primary btn-sm">Ver Historia</a></p>
+          <p><a href="/acercade" class="btn btn-primary btn-sm mt-3 ">Ver Historia</a></p>
         </div>
       </div>
     </div>
