--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,13 @@
             <a href="encontrados">Animales encontrados</a>
           </li>
           <li>
-            <p><a href="/login" class="btn btn-secondary btn-sm">Ingresar</a></p>
+            <a href="listado">Listado de reportes</a>
+          </li>
+
+          <li>
+            <button class="btn btn-primary text-slate-200">
+              <a href="/login" class="text-slate-200">Ingresar</a>
+            </button>
           </li>
         </ul>
       </div>
