--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,7 +14,7 @@
             <a href="google.com">¿Olvidó su contraseña?</a>
           </div>
           <button type="submit" class="btn btn-primary btn-block">Ingresar</button>
-          <button type="submit" class="btn btn-secondary btn-block">Registrarse</button>
+          <button type="submit" class="btn btn-secondary btn-block"><a href="/registrarse">Registrarse</a></button>
         </form>
       </div>
     </div>
