--- a/src/app/components/listado/listado.component.html
+++ b/src/app/components/listado/listado.component.html
@@ -1,34 +1,34 @@
 <div class="overflow-x-auto p-4 border border-gray-300 rounded-lg">
-  <div>
-    <h1 class="text-3xl m-4 p-2">Listado de reportes registrados</h1>
-  </div>
     <table class="table table-xs">
       <thead>
         <tr>
-          <th>ID</th> 
-          <th>Rescatista</th> 
-          <th>Correo de rescatista</th> 
-          <th>Celular de rescatista</th> 
-          <th>Descripción de rescate</th> 
+          <th></th> 
+          <th>Especie</th> 
+          <th>Edad</th> 
+          <th>Tamaño</th> 
+          <th>Personalidad</th> 
+          <th>Necesidades Especiales</th> 
         </tr>
       </thead> 
       <tbody>
         <tr>
-          <tr *ngFor="let rescate of datos">
-            <th>{{ rescate.idrescate }}</th>
-            <th>{{ rescate.nombreDeRescatista }} {{rescate.apellidoDeRescatista}}</th>
-            <th>{{ rescate.correoDeRescatista }}</th>
-            <th>{{ rescate.celularDeRescatista }}</th>
-            <th>{{ rescate.descripcionRescate }}</th>
+          <tr *ngFor="let animal of datos">
+            <th>{{ animal.id }}</th>
+            <td>{{ animal.especie }}</td>
+            <td>{{ animal.edad }}</td>
+            <td>{{ animal.tamano }}</td>
+            <td>{{ animal.personalidad }}</td>
+            <td>{{ animal.necesidadesEspeciales }}</td>
         </tr>
       </tbody> 
       <tfoot>
         <tr>
-          <th>ID</th> 
-          <th>Rescatista</th> 
-          <th>Correo de rescatista</th> 
-          <th>Celular de rescatista</th> 
-          <th>Descripción de rescate</th> 
+          <th></th> 
+          <th>Especie</th> 
+          <th>Edad</th> 
+          <th>Tamaño</th> 
+          <th>Personalidad</th> 
+          <th>Necesidades Especiales</th>
         </tr>
       </tfoot>
     </table>
